- disable liquid and water sliders when beaker is full?

PERFORMANCE OPTIMIZATIONS:

MIGRATE TO PHETCOMMON:

CLEANUP:
- add cursors to all things that are interactive
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects
- javadoc


DONE:
7/9/08 - adjust layout of bar graph components
7/9/08 - add labels to major log tick marks
7/9/08 - add log tick marks to bar graph
7/9/08 - change color of pH probe tip to black (Trish request)
7/9/08 - change default liquid to milk (Trish request)
******* version 0.00.10 (23045)
7/9/08 - reset Custom pH to 7 when user explicitly selects it
7/9/08 - add LiquidDescriptorListener.pHChanged
7/9/08 - subclass CustomLiquidDescriptor so that base class pH values can't be changed
7/9/08 - switch to Custom liquid when user changes pH slider or pH text field
7/9/08 - add flags to LiquidControlNode and PHControlNode to discern when user is responsible for change
7/9/08 - make Custom liquid mutable
7/9/08 - cleanup in Liquid, preparing for refactor
7/8/08 - did a bunch of work on Custom liquid feature, but reverted
7/7/08 - adjust clock framerate and faucet flow rates to make animation smoother
7/7/08 - hide water faucet when liquid selection is Custom
7/7/08 - delete sorting of liquids by pH, Custom liquid breaks the previous ordering method
7/7/08 - add Custom to liquid choices, last choice in combo box
7/7/08 - disable confirmation dialog when switching liquids, by request for "Custom liquid" feature
7/7/08 - replace JSliders on faucets with a Piccolo-based slider, for predictable look & layout
******* version 0.00.09 (22992)
7/3/08 - change water color to [193, 222, 227, 127]
7/3/08 - display RGBA values in LiquidColorDialog
7/3/08 - set color of liquid in beaker by changing alpha channel of liquid based on % water